--- a/EIS/views/DashBoardView.xaml
+++ b/EIS/views/DashBoardView.xaml
@@ -6,7 +6,48 @@
              xmlns:local="clr-namespace:EIS.views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
+    <Grid Background="White">
+        <ListView Name="lstEmpInfo" ItemsSource="{Binding}" >
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="First Name" DisplayMemberBinding="{Binding Path=first_name}"></GridViewColumn>
+                    <GridViewColumn Header="Middle Name" DisplayMemberBinding="{Binding Path=middle_name}"></GridViewColumn>
+                    <GridViewColumn Header="Last Name" DisplayMemberBinding="{Binding Path=last_name}"></GridViewColumn>
+                    <GridViewColumn Header="Email Id" DisplayMemberBinding="{Binding Path=email_id}"></GridViewColumn>
+                    <GridViewColumn Header="Employee Id" DisplayMemberBinding="{Binding Path=emp_id}"></GridViewColumn>
+                    <GridViewColumn Header="Date of Birth" DisplayMemberBinding="{Binding Path=dob}"></GridViewColumn>
+                    <GridViewColumn Header="Date of Joining" DisplayMemberBinding="{Binding Path=doj}"></GridViewColumn>
+                    <GridViewColumn Header="Date of Living" DisplayMemberBinding="{Binding Path=dol}"></GridViewColumn>
+                    <GridViewColumn Header="City" DisplayMemberBinding="{Binding Path=city}"></GridViewColumn>
+                    <GridViewColumn Header="Address" DisplayMemberBinding="{Binding Path=address}"></GridViewColumn>
+                    <GridViewColumn Header="Department" DisplayMemberBinding="{Binding Path=department}"></GridViewColumn>
+                    <GridViewColumn Header="Salary" DisplayMemberBinding="{Binding Path=salary}"></GridViewColumn>
+                    <GridViewColumn Header="Vendor" DisplayMemberBinding="{Binding Path=vendor}"></GridViewColumn>
+                </GridView>
+            </ListView.View>
+        </ListView>
+        
+        <!--<Button Height="23" HorizontalAlignment="Left" Margin="18,0,0,22"
+
+    Name="btnFirst" VerticalAlignment="Bottom" Width="40"
+
+    Content="&lt;&lt;" Click="btnFirst_Click" Opacity="0.75">
+</Button>
+<Button Height="23" HorizontalAlignment="Right" Margin="0,0,474,22"
+
+    Name="btnNext" VerticalAlignment="Bottom" Width="40"
+
+    Content="&gt;" Click="btnNext_Click" Opacity="0.75">
+</Button>
+<Button Height="23" HorizontalAlignment="Right" Margin="0,0,429,22"
+
+    VerticalAlignment="Bottom" Width="40" Name="btnLast"
+
+    Click="btnLast_Click" Opacity="0.75" Content="&gt;&gt;">
+</Button>
+<Button Height="23" Margin="62,0,551,22" VerticalAlignment="Bottom"
+
+    Name="btnPrev" Click="btnPrev_Click" Opacity="0.75" Content="&lt;">
+</Button>-->
     </Grid>
 </UserControl>
