--- a/EIS/views/DashBoardView.xaml
+++ b/EIS/views/DashBoardView.xaml
@@ -6,10 +6,21 @@
              xmlns:local="clr-namespace:EIS.views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="White">
-        <ListView Name="lstEmpInfo" ItemsSource="{Binding}" >
+    <Grid Background="White" Margin="30">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="10*"/>
+            <RowDefinition Height="1*"/>
+        </Grid.RowDefinitions>
+        <ListView Name="lstEmpInfo" Grid.Row="0" ItemsSource="{Binding}" Margin="10">
             <ListView.View>
                 <GridView>
+                    <GridViewColumn  Header="Select">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <RadioButton GroupName="selectEmp" DataContext="{Binding}" Checked="EmpChecked"/>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
                     <GridViewColumn Header="First Name" DisplayMemberBinding="{Binding Path=first_name}"></GridViewColumn>
                     <GridViewColumn Header="Middle Name" DisplayMemberBinding="{Binding Path=middle_name}"></GridViewColumn>
                     <GridViewColumn Header="Last Name" DisplayMemberBinding="{Binding Path=last_name}"></GridViewColumn>
@@ -26,28 +37,39 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        
-        <!--<Button Height="23" HorizontalAlignment="Left" Margin="18,0,0,22"
 
-    Name="btnFirst" VerticalAlignment="Bottom" Width="40"
+        <Grid Name="bottomBar" Grid.Row="1" Margin="0,2,0,2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <Grid Name="pagination">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
 
-    Content="&lt;&lt;" Click="btnFirst_Click" Opacity="0.75">
-</Button>
-<Button Height="23" HorizontalAlignment="Right" Margin="0,0,474,22"
+                <DockPanel Grid.Column="0" HorizontalAlignment="Center">
+                    <Label Content="Total Pages:"/>
+                    <Label Content="{Binding lastPage}"/>
+                </DockPanel>
 
-    Name="btnNext" VerticalAlignment="Bottom" Width="40"
+                <Button Grid.Column="1" Content="&lt;" Click="prevPage"/>
+                <TextBox Name="CurrentPage" Grid.Column=" 2" Text="1" HorizontalAlignment="Center" TextChanged="pageChanged"/>
+                <Button Grid.Column="3" Content="&gt;" Click="nextPage"/>
+            </Grid>
 
-    Content="&gt;" Click="btnNext_Click" Opacity="0.75">
-</Button>
-<Button Height="23" HorizontalAlignment="Right" Margin="0,0,429,22"
-
-    VerticalAlignment="Bottom" Width="40" Name="btnLast"
-
-    Click="btnLast_Click" Opacity="0.75" Content="&gt;&gt;">
-</Button>
-<Button Height="23" Margin="62,0,551,22" VerticalAlignment="Bottom"
-
-    Name="btnPrev" Click="btnPrev_Click" Opacity="0.75" Content="&lt;">
-</Button>-->
+            <Grid Grid.Column="1" Name="CRUDButtons" Margin="20,0,10,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="5*"/>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="5*"/>
+                    </Grid.ColumnDefinitions>
+                    <Button Grid.Column="0" Content="Update" Click="updateCurrentEmployee"/>
+                    <Button Grid.Column="2" Content="Delete" Click="deleteCurrentEmployee"/>
+                </Grid>
+            </Grid>
     </Grid>
 </UserControl>
