--- a/EIS/Pages/mainPage.xaml
+++ b/EIS/Pages/mainPage.xaml
@@ -42,13 +42,13 @@
             </Grid.ColumnDefinitions>
 
             <Label Grid.Column="0" HorizontalAlignment="Center" Content="Id: "/>
-            <Label Grid.Column="1" HorizontalAlignment="Left" Content ="{Binding emp_id}" x:Name="userId"/>
+            <Label Grid.Column="1" HorizontalAlignment="Left" Content ="{Binding EmpId}"/>
 
             <Label Grid.Column="2" HorizontalAlignment="Center" Content="Name: "/>
-            <Label Grid.Column="3" HorizontalAlignment="Left" Content ="{Binding user_name}" x:Name="userName"/>
+            <Label Grid.Column="3" HorizontalAlignment="Left" Content ="{Binding UserName}"/>
 
             <Label Grid.Column="4" HorizontalAlignment="Center" Content="User Role: "/>
-            <Label Grid.Column="5" HorizontalAlignment="Left" Content ="{Binding role}" x:Name="userRole"/>
+            <Label Grid.Column="5" HorizontalAlignment="Left" Content ="{Binding Role}"/>
 
             <Button Grid.Column="7" Margin="1" HorizontalAlignment="Stretch" x:Name="dashButtton" Visibility="Hidden" Content="DashBoard" Click="switchToDashBoard"/>
             <Button Grid.Column="8" Margin="1" HorizontalAlignment="Stretch" x:Name="formButton" Visibility="Hidden" Content="Form" Click="switchToForm"/>
