--- a/EIS/views/DashBoardView.xaml
+++ b/EIS/views/DashBoardView.xaml
@@ -5,8 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:EIS.views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="White" Margin="30" MinHeight="40">
+             d:DesignHeight="450" d:DesignWidth="800" Background="#FF8C9AAE">
+    <Grid Background="#FFFDE161" Margin="30" MinHeight="40">
         <Grid.RowDefinitions>
             <RowDefinition Height="1*" MaxHeight="30"/>
             <RowDefinition Height="10*"/>
@@ -30,11 +30,11 @@
             <TextBox Grid.Column="1" Name="EmpIdSearch" TextAlignment="Center" HorizontalAlignment="Center"   VerticalAlignment="Center" Height="20" Width="120"/>
             <DatePicker Grid.Column="3" Name="DojSearch" SelectedDateFormat="Short" VerticalAlignment="Center" HorizontalAlignment="Center" Width="120" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
             <DatePicker Grid.Column="5" Name="DolSearch" SelectedDateFormat="Short" VerticalAlignment="Center" HorizontalAlignment="Center" Width="120" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-            
+
             <Button Grid.Column="6" Content="Search" Click="search" Margin="5,2,5,2"/>
             <Button Grid.Column="7" Content="Clear" Click="clear" Margin="5,2,5,2"/>
         </Grid>
-        <ListView Name="lstEmpInfo" Grid.Row="1" ItemsSource="{Binding}" Margin="10">
+        <ListView Name="lstEmpInfo" Grid.Row="1" ItemsSource="{Binding}" Margin="10" Background="White">
             <ListView.View>
                 <GridView>
                     <GridViewColumn  Header="Select">
@@ -85,14 +85,14 @@
             </Grid>
 
             <Grid Grid.Column="1" Name="CRUDButtons" Margin="20,0,10,0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="5*"/>
-                        <ColumnDefinition Width="1*"/>
-                        <ColumnDefinition Width="5*"/>
-                    </Grid.ColumnDefinitions>
-                    <Button Grid.Column="0" Content="Update" Click="updateCurrentEmployee"/>
-                    <Button Grid.Column="2" Content="Delete" Click="deleteCurrentEmployee"/>
-                </Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="5*"/>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="5*"/>
+                </Grid.ColumnDefinitions>
+                <Button Grid.Column="0" Content="Update" Click="updateCurrentEmployee"/>
+                <Button Grid.Column="2" Content="Delete" Click="deleteCurrentEmployee"/>
             </Grid>
+        </Grid>
     </Grid>
 </UserControl>
