--- a/EIS/views/DashBoardView.xaml
+++ b/EIS/views/DashBoardView.xaml
@@ -5,8 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:EIS.views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Background="#FF8C9AAE">
-    <Grid Background="#FFFDE161" Margin="30" MinHeight="40">
+             d:DesignHeight="450" d:DesignWidth="800" Background="white">
+    <Grid Margin="30" MinHeight="40">
         <Grid.RowDefinitions>
             <RowDefinition Height="1*" MaxHeight="30"/>
             <RowDefinition Height="10*"/>
